# Wesst-Calculator

./: .gitignore  PRIVACY.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  הלכות-ווסתות.txt
.github/workflows/: desktop-build.yml  extension-build.yml
chrome-store-assets/: README.md  STORE_LISTING_HE.md
docs/: 01-overview.md  02-architecture.md  03-specification.md  04-roadmap.md  05-decisions.md  06-conventions.md  07-activity-log.md
extension/: options.html  popup.html  tsconfig.json  vite.config.ts
extension/public/: manifest.json
extension/src/: extensionSettings.ts  googleDrive.ts  options.css  options.tsx  popup.css  popup.tsx  service-worker.ts  upcoming.ts
scripts/: chrome-web-store-credentials.example.json  chrome-web-store.mjs  generate-icons.mjs  generate-store-assets.py  package-extension.ps1  parse-halacha.mjs
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/calendar/: gregorianBridge.ts  hebrewDate.ts  zmanim.ts
src/data/: halachaSections.ts  locations.ts  runtimeHooks.ts  storage.ts  types.ts
src/engine/: calculator.ts  medicationRules.ts  onahBeinonit.ts  sightingClassifier.ts  stateManager.ts  uprootingRules.ts  vesetChodesh.ts  vesetDilug.ts  vesetGuf.ts  vesetHaflaga.ts  vesetKfitzot.ts  vesetShavua.ts  vesetSirug.ts  yamimNevukhim.ts
src/i18n/: index.ts
src/ui/: App.tsx  AppContext.tsx
test/calendar/: hebrewDate.test.ts  zmanim.test.ts
test/engine/: phase3.test.ts  (+4 more)
(+18 files in other folders)
