[package]
name = "wesst-calculator"
version = "0.1.1"
description = "Halachic Vestos Calculator desktop application"
authors = ["Hershy Rozenfeld"]
license = ""
repository = "https://github.com/HershyRozenfeld/Wesst-Calculator"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wesst_calculator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
